# Conversation-set-generator

./: .gitignore  GOOGLE_SHEETS_SETUP.md  README.md  config.yaml  config_manager.py  conversation_generator.py  google_sheets_exporter.py  llm_providers.py  manage_worksheets.py  prompts.py  pyproject.toml  quick_start.py  requirements.txt  setup.bat
System_Prompts/: Task_Gen_prompt  User_sim_Meta_prompt.md
conversation_sets/: Refined_example_conversation_Set.md  example_conversation_set.md  example_traj1.json  example_traj2.json  example_traj3.json
tests/: README.md  __init__.py  run_tests.py  test_dynamic_prompt.py  test_google_sheets.py  test_system.py
